[BUG #4826] Hidden overflow breaks box-pack: center in Firefox

--- a/framework/source/resource/qx/mobile/less/_android.less
+++ b/framework/source/resource/qx/mobile/less/_android.less
@@ -112,7 +112,8 @@ a:hover { color: #e89c00; }
 
 .toolbar-button > div {
   height: 50px;
-  overflow: hidden;
+  /* Hidden overflow breaks box-pack: center in Firefox */
+  /* overflow: hidden; */
 }
 
 .toolbar-button .label {
